--- a/package.xml
+++ b/package.xml
@@ -15,6 +15,7 @@
   <depend>visualization_msgs</depend>
   <depend>geometry_msgs</depend>
   <depend>tf2_ros</depend>
+  <depend>tf2_eigen</depend>
   <depend>tf2_geometry_msgs</depend>
   <depend>nav_msgs</depend>
   
