--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,5 +55,9 @@ install(TARGETS
   simulated_lidar
   DESTINATION lib/${PROJECT_NAME})
 
+install(DIRECTORY
+  launch
+  DESTINATION share/${PROJECT_NAME}
+)
 # 自动处理安装和导出
 ament_auto_package()
